src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AD_Manager__c</fullName>
        <description>Manager from AD</description>
        <label>AD Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altify_Dealmaker_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altify Dealmaker User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Quota__c</fullName>
        <label>Annual Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please use this checkbox to specify is a User required Apttus license or not. If you check this then the user will appear in the List view of Manage licenses.</description>
        <inlineHelpText>Please use this checkbox to specify is a User required Apttus license or not. If you check this then the user will appear in the List view of Manage licenses.</inlineHelpText>
        <label>Apttus User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(IsBlank(Contact.Account.Name), BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
        <label>Asset Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours__c</fullName>
        <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CIManagementView__c</fullName>
        <label>CI Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                    <default>true</default>
                    <label>Update and Delete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC Client Management user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_QV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
        <label>Manage QuickViews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_Email_Signature__c</fullName>
        <description>Inserting user signatures while sending or replying emails through Activity Feed.</description>
        <label>Rich Text Email Signature</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Casual_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Casual User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Chatbot_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMC Helix Chatbot User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Schedule_CR_and_Blackouts_During_Overlap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows to schedule change requests during a blackout and create a blackout when change requests exists for that duration.</inlineHelpText>
        <label>Override Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>Delete this field so the user does not revert back to a RemedyForce user.</inlineHelpText>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_District_Manager__c</fullName>
        <label>DM (District Manager)</label>
        <relationshipName>DM_District_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DN__c</fullName>
        <description>Distinguished Name from AD</description>
        <label>DN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSO_General_Manager__c</fullName>
        <label>DSO General Manager</label>
        <relationshipName>DSO_General_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Director_of_Operations__c</fullName>
        <label>Director of Operations</label>
        <relationshipName>Director_of_Operations</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Exclude_User_for_Quota_Planning__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exclude User for Quota Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Level_Margin_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Level Margin Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Manager from AD</description>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <description>Used to determine the Legal Approver for Service Quote/Proposals.</description>
        <label>Legal Approver</label>
        <relationshipName>Service_Region</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Manager_Full_Name__c</fullName>
        <formula>Manager.FirstName &amp; &apos; &apos; &amp;  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Approver__c</fullName>
        <label>Margin Approver</label>
        <relationshipName>Margin_Approver_To_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <description>Please enter important changes/notes</description>
        <inlineHelpText>Please enter important changes/notes</inlineHelpText>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <label>​​Operations Manager</label>
        <relationshipName>Operations_Manager2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Project_Development_Personnel__c</fullName>
        <label>Project Development Personnel</label>
        <relationshipName>Project_Development_Personnel</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Q1_MA_Quota__c</fullName>
        <label>Q1 MA Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_SR_Quota__c</fullName>
        <label>Q1 SR Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_TK_Quota__c</fullName>
        <label>Q1 TK Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_Total_Quota__c</fullName>
        <formula>Q1_MA_Quota__c + Q1_SR_Quota__c + Q1_TK_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 Total Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_MA_Quota__c</fullName>
        <label>Q2 MA Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_SR_Quota__c</fullName>
        <label>Q2 SR Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_TK_Quota__c</fullName>
        <label>Q2 TK Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Total_Quota__c</fullName>
        <formula>Q2_MA_Quota__c + Q2_SR_Quota__c + Q2_TK_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Total Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_MA_Quota__c</fullName>
        <label>Q3 MA Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_SR_Quota__c</fullName>
        <label>Q3 SR Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_TK_Quota__c</fullName>
        <label>Q3 TK Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Total_Quota__c</fullName>
        <formula>Q3_MA_Quota__c + Q3_SR_Quota__c + Q3_TK_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Total Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarterly_Quota__c</fullName>
        <label>Quarterly Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RGM_Regional_General_Manager__c</fullName>
        <label>RGM (Regional General Manager)</label>
        <relationshipName>RGM_Regional_General_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ROM_Regional_Operations_Manager__c</fullName>
        <label>ROM (Regional Operations Manager)</label>
        <relationshipName>ROM_Regional_Operations_Manager2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>ROSM_Regional_Owner_Sales_Manager__c</fullName>
        <label>ROSM (Regional Owner Sales Manager)</label>
        <relationshipName>ROSM_Regional_Owner_Sales_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RSM_Regional_Service_Manager__c</fullName>
        <label>RSM (Regional Service Manager)</label>
        <relationshipName>RSM_Regional_Service_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Regional_Contract_Coordinator_RCC__c</fullName>
        <label>Regional Contract Coordinator (RCC)</label>
        <relationshipName>Regional_Contract_Coordinator_RCC</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Sales_Number__c</fullName>
        <description>SSR number</description>
        <inlineHelpText>Your SSR sales ID number, Service users only</inlineHelpText>
        <label>SSR Sales Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Second_Level_Margin_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Level Margin Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_RGM__c</fullName>
        <label>Senior RGM</label>
        <relationshipName>Senior_RGM</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Service_Center_Manager__c</fullName>
        <label>Service Center Manager</label>
        <relationshipName>Service_Center_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Service_Coordinator__c</fullName>
        <description>Service coordinator for the Rep</description>
        <inlineHelpText>This is the service or sales email address for the users district.  It was initially set up for them tor receive email notifications when credit authorizes their quotes.</inlineHelpText>
        <label>Service Coordinator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_District__c</fullName>
        <description>District Office</description>
        <inlineHelpText>For FS users only</inlineHelpText>
        <label>Service District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Canada / Northeast Region</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chattanooga</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Danbury</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>East Division</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Memphis</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic Region</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <description>Service Locations used by Apttus</description>
        <inlineHelpText>Used for Apttus</inlineHelpText>
        <label>Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_District__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Atlanta District</fullName>
                </value>
                <value>
                    <fullName>Birmingham District</fullName>
                </value>
                <value>
                    <fullName>Boston District</fullName>
                </value>
                <value>
                    <fullName>Calgary Center</fullName>
                </value>
                <value>
                    <fullName>Canada / Northeast Region</fullName>
                </value>
                <value>
                    <fullName>Charlotte District</fullName>
                </value>
                <value>
                    <fullName>Cincinnati District</fullName>
                </value>
                <value>
                    <fullName>Cleveland District</fullName>
                </value>
                <value>
                    <fullName>Columbia District</fullName>
                </value>
                <value>
                    <fullName>Columbus District</fullName>
                </value>
                <value>
                    <fullName>Dallas District</fullName>
                </value>
                <value>
                    <fullName>Danbury District</fullName>
                </value>
                <value>
                    <fullName>Denver District</fullName>
                </value>
                <value>
                    <fullName>Des Moines Center</fullName>
                </value>
                <value>
                    <fullName>Detroit District</fullName>
                </value>
                <value>
                    <fullName>East Division</fullName>
                </value>
                <value>
                    <fullName>Fargo Center</fullName>
                </value>
                <value>
                    <fullName>Greensboro Center</fullName>
                </value>
                <value>
                    <fullName>Houston District</fullName>
                </value>
                <value>
                    <fullName>Indianapolis District</fullName>
                </value>
                <value>
                    <fullName>Kansas City District</fullName>
                </value>
                <value>
                    <fullName>Knoxville District</fullName>
                </value>
                <value>
                    <fullName>Lincoln District</fullName>
                </value>
                <value>
                    <fullName>Louisville Center</fullName>
                </value>
                <value>
                    <fullName>Memphis District</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic Region</fullName>
                </value>
                <value>
                    <fullName>Minneapolis District</fullName>
                </value>
                <value>
                    <fullName>Montreal District</fullName>
                </value>
                <value>
                    <fullName>Nashville Center</fullName>
                </value>
                <value>
                    <fullName>New Orleans District</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <description>Service Region</description>
        <inlineHelpText>For FS users only</inlineHelpText>
        <label>Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canada / Northeast Region</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>East Division</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic Region</fullName>
                </value>
                <value>
                    <fullName>Mid-States Region</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>North Central Region</fullName>
                </value>
                <value>
                    <fullName>North Division</fullName>
                </value>
                <value>
                    <fullName>Northeast Region</fullName>
                </value>
                <value>
                    <fullName>South Central Region</fullName>
                </value>
                <value>
                    <fullName>Southeast Region</fullName>
                </value>
                <value>
                    <fullName>West Division</fullName>
                </value>
                <value>
                    <fullName>Western Region</fullName>
                </value>
                <value>
                    <fullName>West Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Employee start date with company or date of employee&apos;s title/role change.  e.g. SSR becomes SCM.</description>
        <inlineHelpText>Employee start date with company or date of employee&apos;s title/role change.  e.g. SSR becomes SCM.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template_Cover_Page_Location__c</fullName>
        <description>Copy the Service District initially and only update if requested by the user.</description>
        <inlineHelpText>Title that the user wants displayed on the cover page of their proposals that they are generating</inlineHelpText>
        <label>Template Cover Page Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Quota__c</fullName>
        <formula>Q1_Total_Quota__c + Q2_Total_Quota__c + Q3_Total_Quota__c + Q4_Total_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_MA_Quota__c</fullName>
        <description>Field to summarize total annual MA quota</description>
        <formula>Q1_MA_Quota__c+Q2_MA_Quota__c+Q3_MA_Quota__c+Q4_MA_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total MA Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SR_Quota__c</fullName>
        <formula>Q1_SR_Quota__c+Q2_SR_Quota__c+Q3_SR_Quota__c+Q4_SR_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total SR Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TK_Quota__c</fullName>
        <formula>Q1_TK_Quota__c+Q2_TK_Quota__c+Q3_TK_Quota__c+Q4_TK_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TK Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>